Oas code samples (#134)
* misc fixes

* Brought in wasm changes

* Brought in Mistral's latest spec

* Got custom code samples working

* Cleanup

* Fixed incorrect uses of useUniqueChild

* Code cleanup

* Updated samples

--- a/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 3.2
+sidebar_position: 3.3
 sidebar_label: Beta Agents
 ---
 
@@ -104,7 +104,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.list({});
+  const result = await mistral.beta.agents.agentsApiV1AgentsList({});
 
   // Handle the result
   console.log(result);
@@ -133,7 +133,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.list()
+    res = mistral.beta.agents.agents_api_v1_agents_list()
 
     # Handle response
     print(res)
@@ -1574,17 +1574,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -1737,8 +1727,8 @@ defaultValue: MyDefaultValue
   id="Agent_completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_list+responses+200+application-json+agent+completion_args+completionargs+temperature"
   parentId="Agent_completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
 >
@@ -1784,7 +1774,17 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-_Default Value:_ `0.3`
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDefaultValue>
 
@@ -2768,17 +2768,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `""`
 
 </ExpandablePropertyDefaultValue>
 
@@ -2972,17 +2962,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -3954,7 +3934,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.create({
+  const result = await mistral.beta.agents.agentsApiV1AgentsCreate({
     model: "LeBaron",
     name: "<value>",
   });
@@ -3986,7 +3966,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.create(model="LeBaron", name="<value>")
+    res = mistral.beta.agents.agents_api_v1_agents_create(model="LeBaron", name="<value>")
 
     # Handle response
     print(res)
@@ -5231,17 +5211,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -5394,8 +5364,8 @@ defaultValue: MyDefaultValue
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_create+request+completion_args+completionargs+temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
 >
@@ -5441,7 +5411,17 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-_Default Value:_ `0.3`
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDefaultValue>
 
@@ -6225,17 +6205,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `""`
 
 </ExpandablePropertyDefaultValue>
 
@@ -6429,17 +6399,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -8488,17 +8448,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -8651,8 +8601,8 @@ defaultValue: MyDefaultValue
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_create+responses+200+application-json+completion_args+completionargs+temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
 >
@@ -8698,7 +8648,17 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-_Default Value:_ `0.3`
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDefaultValue>
 
@@ -9673,17 +9633,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `""`
 
 </ExpandablePropertyDefaultValue>
 
@@ -9877,17 +9827,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -10850,7 +10790,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.get({
+  const result = await mistral.beta.agents.agentsApiV1AgentsGet({
     agentId: "<id>",
   });
 
@@ -10881,7 +10821,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.get(agent_id="<id>")
+    res = mistral.beta.agents.agents_api_v1_agents_get(agent_id="<id>")
 
     # Handle response
     print(res)
@@ -12214,17 +12154,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -12377,8 +12307,8 @@ defaultValue: MyDefaultValue
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_get+responses+200+application-json+completion_args+completionargs+temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
 >
@@ -12424,7 +12354,17 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-_Default Value:_ `0.3`
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDefaultValue>
 
@@ -13399,17 +13339,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `""`
 
 </ExpandablePropertyDefaultValue>
 
@@ -13603,17 +13533,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -14579,7 +14499,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.update({
+  const result = await mistral.beta.agents.agentsApiV1AgentsUpdate({
     agentId: "<id>",
     agentUpdateRequest: {},
   });
@@ -14611,7 +14531,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.update(agent_id="<id>")
+    res = mistral.beta.agents.agents_api_v1_agents_update(agent_id="<id>")
 
     # Handle response
     print(res)
@@ -15912,17 +15832,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -16075,8 +15985,8 @@ defaultValue: MyDefaultValue
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_update+request+completion_args+completionargs+temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
 >
@@ -16122,7 +16032,17 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-_Default Value:_ `0.3`
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDefaultValue>
 
@@ -16906,17 +16826,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `""`
 
 </ExpandablePropertyDefaultValue>
 
@@ -17110,17 +17020,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -19169,17 +19069,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -19332,8 +19222,8 @@ defaultValue: MyDefaultValue
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_update+responses+200+application-json+completion_args+completionargs+temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
 >
@@ -19379,7 +19269,17 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-_Default Value:_ `0.3`
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDefaultValue>
 
@@ -20354,17 +20254,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `""`
 
 </ExpandablePropertyDefaultValue>
 
@@ -20558,17 +20448,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -21537,7 +21417,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.updateVersion({
+  const result = await mistral.beta.agents.agentsApiV1AgentsUpdateVersion({
     agentId: "<id>",
     version: 157995,
   });
@@ -21575,7 +21455,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.update_version(agent_id="<id>", version=157995)
+    res = mistral.beta.agents.agents_api_v1_agents_update_version(agent_id="<id>", version=157995)
 
     # Handle response
     print(res)
@@ -22942,17 +22822,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
@@ -23105,8 +22975,8 @@ defaultValue: MyDefaultValue
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_update_version+responses+200+application-json+completion_args+completionargs+temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
 >
@@ -23152,7 +23022,17 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-_Default Value:_ `0.3`
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDefaultValue>
 
@@ -24127,17 +24007,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `""`
 
 </ExpandablePropertyDefaultValue>
 
@@ -24331,17 +24201,7 @@ examples:
 
 <ExpandablePropertyDefaultValue slot="defaultValue">
 
-<DebugPlaceholder>
-
-No default value provided
-
-_OpenAPI example:_
-
-```
-defaultValue: MyDefaultValue
-```
-
-</DebugPlaceholder>
+_Default Value:_ `false`
 
 </ExpandablePropertyDefaultValue>
 
