--- a/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 3.9
-sidebar_label: Fine Tuning Jobs
+sidebar_position: 3.13
+sidebar_label: Fine Tuning
 ---
 
 import "@speakeasy-api/docs-md-react/docusaurus.css";
@@ -51,25 +51,13 @@ import {
 
 <TagTitle slot="title">
 
-# Fine Tuning Jobs Endpoints
+# Fine Tuning Endpoints
 
 </TagTitle>
 
 <TagDescription slot="description">
 
-<DebugPlaceholder>
-
-No tag description provided
-
-_OpenAPI example:_
-
-```
-tags:
-  - name: fine-tuning.jobs
-    description: My awesome description
-```
-
-</DebugPlaceholder>
+Fine-tuning API
 
 </TagDescription>
 
@@ -122,7 +110,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.fineTuning.jobs.list({});
+  const result = await mistral.fineTuning.jobsApiRoutesFineTuningGetFineTuningJobs({});
 
   // Handle the result
   console.log(result);
@@ -157,7 +145,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.fine_tuning.jobs.list()
+    res = mistral.fine_tuning.jobs_api_routes_fine_tuning_get_fine_tuning_jobs()
 
     # Handle response
     print(res)
@@ -2363,7 +2351,7 @@ defaultValue: MyDefaultValue
   id="data_CompletionJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+responses+200+application-json+data+completionjobout+model"
   parentId="data_CompletionJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -5307,7 +5295,7 @@ defaultValue: MyDefaultValue
   id="data_ClassifierJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+responses+200+application-json+data+classifierjobout+model"
   parentId="data_ClassifierJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -5945,10 +5933,12 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.fineTuning.jobs.create({
-    model: "Camaro",
-    hyperparameters: {
-      learningRate: 0.0001,
+  const result = await mistral.fineTuning.jobsApiRoutesFineTuningCreateFineTuningJob({
+    jobIn: {
+      model: "open-mistral-7b",
+      hyperparameters: {
+        learningRate: 0.0001,
+      },
     },
   });
 
@@ -5978,14 +5968,14 @@ Python
 <CodeSample>
 
 ```python
-from mistralai import Mistral
+from mistralai import Mistral, models
 
 
 with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.fine_tuning.jobs.create(model="Camaro", hyperparameters={
+    res = mistral.fine_tuning.jobs_api_routes_fine_tuning_create_fine_tuning_job(model=models.FineTuneableModel.OPEN_MISTRAL_7B, hyperparameters={
         "learning_rate": 0.0001,
     })
 
@@ -6000,6 +5990,56 @@ with Mistral(
 </TabbedSection>
 
 </OperationCodeSamplesSection>
+
+<OperationParametersSection slot="parameters">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Parameters \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+parameters\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<ExpandableSection>
+
+<ExpandableProperty
+  slot="entry"
+  id="dry_run"
+  headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+parameters+dry_run"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasExpandableContent={true}
+  expandByDefault={true}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### dry_run \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+parameters+dry_run\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+* If `true` the job is not spawned, instead the query returns a handful of useful metadata
+  for the user to perform sanity checks (see `LegacyJobMetadataOut` response).
+* Otherwise, the job is started and the query returns the job ID along with some of the
+  input parameters (see `JobOut` response).
+
+
+</ExpandablePropertyDescription>
+
+</ExpandableProperty>
+
+</ExpandableSection>
+
+</SectionContent>
+
+</Section>
+
+</OperationParametersSection>
 
 <OperationRequestBodyExamplesSection slot="request-body-examples">
 
@@ -8059,7 +8099,7 @@ defaultValue: MyDefaultValue
   slot="entry"
   id="model"
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+model"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -11162,7 +11202,7 @@ defaultValue: MyDefaultValue
   id="CompletionJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+responses+200+application-json+completionjobout+model"
   parentId="CompletionJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -14105,7 +14145,7 @@ defaultValue: MyDefaultValue
   id="ClassifierJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+responses+200+application-json+classifierjobout+model"
   parentId="ClassifierJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -15344,7 +15384,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.fineTuning.jobs.get({
+  const result = await mistral.fineTuning.jobsApiRoutesFineTuningGetFineTuningJob({
     jobId: "c167a961-ffca-4bcf-93ac-6169468dd389",
   });
 
@@ -15381,7 +15421,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.fine_tuning.jobs.get(job_id="c167a961-ffca-4bcf-93ac-6169468dd389")
+    res = mistral.fine_tuning.jobs_api_routes_fine_tuning_get_fine_tuning_job(job_id="c167a961-ffca-4bcf-93ac-6169468dd389")
 
     # Handle response
     print(res)
@@ -18516,7 +18556,7 @@ defaultValue: MyDefaultValue
   id="CompletionDetailedJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+responses+200+application-json+completiondetailedjobout+model"
   parentId="CompletionDetailedJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -22886,7 +22926,7 @@ defaultValue: MyDefaultValue
   id="ClassifierDetailedJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+responses+200+application-json+classifierdetailedjobout+model"
   parentId="ClassifierDetailedJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -23466,7 +23506,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.fineTuning.jobs.cancel({
+  const result = await mistral.fineTuning.jobsApiRoutesFineTuningCancelFineTuningJob({
     jobId: "6188a2f6-7513-4e0f-89cc-3f8088523a49",
   });
 
@@ -23503,7 +23543,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.fine_tuning.jobs.cancel(job_id="6188a2f6-7513-4e0f-89cc-3f8088523a49")
+    res = mistral.fine_tuning.jobs_api_routes_fine_tuning_cancel_fine_tuning_job(job_id="6188a2f6-7513-4e0f-89cc-3f8088523a49")
 
     # Handle response
     print(res)
@@ -26638,7 +26678,7 @@ defaultValue: MyDefaultValue
   id="CompletionDetailedJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+responses+200+application-json+completiondetailedjobout+model"
   parentId="CompletionDetailedJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -31008,7 +31048,7 @@ defaultValue: MyDefaultValue
   id="ClassifierDetailedJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+responses+200+application-json+classifierdetailedjobout+model"
   parentId="ClassifierDetailedJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -31588,7 +31628,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.fineTuning.jobs.start({
+  const result = await mistral.fineTuning.jobsApiRoutesFineTuningStartFineTuningJob({
     jobId: "56553e4d-0679-471e-b9ac-59a77d671103",
   });
 
@@ -31625,7 +31665,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.fine_tuning.jobs.start(job_id="56553e4d-0679-471e-b9ac-59a77d671103")
+    res = mistral.fine_tuning.jobs_api_routes_fine_tuning_start_fine_tuning_job(job_id="56553e4d-0679-471e-b9ac-59a77d671103")
 
     # Handle response
     print(res)
@@ -34770,7 +34810,7 @@ defaultValue: MyDefaultValue
   id="CompletionDetailedJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+responses+200+application-json+completiondetailedjobout+model"
   parentId="CompletionDetailedJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
@@ -39140,7 +39180,7 @@ defaultValue: MyDefaultValue
   id="ClassifierDetailedJobOut_model"
   headingId="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+responses+200+application-json+classifierdetailedjobout+model"
   parentId="ClassifierDetailedJobOut"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"ministral-3b-latest\"","linkedLabel":"\"ministral-3b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"ministral-8b-latest\"","linkedLabel":"\"ministral-8b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-7b\"","linkedLabel":"\"open-mistral-7b\"","children":[],"breakoutSubTypes":{}},{"label":"\"open-mistral-nemo\"","linkedLabel":"\"open-mistral-nemo\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-small-latest\"","linkedLabel":"\"mistral-small-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-medium-latest\"","linkedLabel":"\"mistral-medium-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral-large-latest\"","linkedLabel":"\"mistral-large-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"pixtral-12b-latest\"","linkedLabel":"\"pixtral-12b-latest\"","children":[],"breakoutSubTypes":{}},{"label":"\"codestral-latest\"","linkedLabel":"\"codestral-latest\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={false}
