--- a/examples/docusaurus/mistral/docs/api/endpoint/models.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/models.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 3.10
+sidebar_position: 3.14
 sidebar_label: Models
 ---
 
@@ -104,7 +104,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.list();
+  const result = await mistral.models.listModelsV1ModelsGet();
 
   // Handle the result
   console.log(result);
@@ -133,7 +133,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.list()
+    res = mistral.models.list_models_v1_models_get()
 
     # Handle response
     print(res)
@@ -577,6 +577,64 @@ defaultValue: MyDefaultValue
 </ExpandableBreakoutDefaultValue>
 
 <ExpandableBreakoutProperties slot="properties">
+
+<ExpandableProperty
+  slot="entry"
+  id="data_BaseModelCard_capabilities_ModelCapabilities_classification"
+  headingId="operation-list_models_v1_models_get+responses+200+application-json+data+basemodelcard+capabilities+modelcapabilities+classification"
+  parentId="data_BaseModelCard_capabilities_ModelCapabilities"
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### classification \{#operation-list_models_v1_models_get+responses+200+application-json+data+basemodelcard+capabilities+modelcapabilities+classification\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
@@ -1026,6 +1084,74 @@ defaultValue: MyDefaultValue
 <ExpandablePropertyTitle slot="title">
 
 ##### deprecation \{#operation-list_models_v1_models_get+responses+200+application-json+data+basemodelcard+deprecation\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="data_BaseModelCard_deprecation_replacement_model"
+  headingId="operation-list_models_v1_models_get+responses+200+application-json+data+basemodelcard+deprecation_replacement_model"
+  parentId="data_BaseModelCard"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### deprecation_replacement_model \{#operation-list_models_v1_models_get+responses+200+application-json+data+basemodelcard+deprecation_replacement_model\}
 
 </ExpandablePropertyTitle>
 
@@ -1838,6 +1964,64 @@ defaultValue: MyDefaultValue
 
 <ExpandableProperty
   slot="entry"
+  id="data_FTModelCard_capabilities_ModelCapabilities_classification"
+  headingId="operation-list_models_v1_models_get+responses+200+application-json+data+ftmodelcard+capabilities+modelcapabilities+classification"
+  parentId="data_FTModelCard_capabilities_ModelCapabilities"
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### classification \{#operation-list_models_v1_models_get+responses+200+application-json+data+ftmodelcard+capabilities+modelcapabilities+classification\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="data_FTModelCard_capabilities_ModelCapabilities_completion_chat"
   headingId="operation-list_models_v1_models_get+responses+200+application-json+data+ftmodelcard+capabilities+modelcapabilities+completion_chat"
   parentId="data_FTModelCard_capabilities_ModelCapabilities"
@@ -2284,6 +2468,74 @@ defaultValue: MyDefaultValue
 <ExpandablePropertyTitle slot="title">
 
 ##### deprecation \{#operation-list_models_v1_models_get+responses+200+application-json+data+ftmodelcard+deprecation\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="data_FTModelCard_deprecation_replacement_model"
+  headingId="operation-list_models_v1_models_get+responses+200+application-json+data+ftmodelcard+deprecation_replacement_model"
+  parentId="data_FTModelCard"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### deprecation_replacement_model \{#operation-list_models_v1_models_get+responses+200+application-json+data+ftmodelcard+deprecation_replacement_model\}
 
 </ExpandablePropertyTitle>
 
@@ -3001,7 +3253,7 @@ _Retrieve Model_
 
 <OperationDescriptionSection slot="description">
 
-Retrieve a model information.
+Retrieve information about a model.
 
 </OperationDescriptionSection>
 
@@ -3032,7 +3284,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.retrieve({
+  const result = await mistral.models.retrieveModelV1ModelsModelIdGet({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
   });
 
@@ -3069,10 +3321,36 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.retrieve(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.retrieve_model_v1_models_model_id_get(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
+```
+
+</CodeSample>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-retrieve_model_v1_models_model_id_get+code-samples+curl"
+>
+
+cURL
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-retrieve_model_v1_models_model_id_get+code-samples+curl"
+>
+
+<CodeSample>
+
+```cURL
+curl --request GET \
+--url 'https://api.mistral.ai/v1/models/{model_id}' \
+
 ```
 
 </CodeSample>
@@ -3499,6 +3777,64 @@ defaultValue: MyDefaultValue
 </ExpandableBreakoutDefaultValue>
 
 <ExpandableBreakoutProperties slot="properties">
+
+<ExpandableProperty
+  slot="entry"
+  id="BaseModelCard_capabilities_ModelCapabilities_classification"
+  headingId="operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+basemodelcard+capabilities+modelcapabilities+classification"
+  parentId="BaseModelCard_capabilities_ModelCapabilities"
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### classification \{#operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+basemodelcard+capabilities+modelcapabilities+classification\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
@@ -3948,6 +4284,74 @@ defaultValue: MyDefaultValue
 <ExpandablePropertyTitle slot="title">
 
 ##### deprecation \{#operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+basemodelcard+deprecation\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="BaseModelCard_deprecation_replacement_model"
+  headingId="operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+basemodelcard+deprecation_replacement_model"
+  parentId="BaseModelCard"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### deprecation_replacement_model \{#operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+basemodelcard+deprecation_replacement_model\}
 
 </ExpandablePropertyTitle>
 
@@ -4759,6 +5163,64 @@ defaultValue: MyDefaultValue
 
 <ExpandableProperty
   slot="entry"
+  id="FTModelCard_capabilities_ModelCapabilities_classification"
+  headingId="operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+ftmodelcard+capabilities+modelcapabilities+classification"
+  parentId="FTModelCard_capabilities_ModelCapabilities"
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### classification \{#operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+ftmodelcard+capabilities+modelcapabilities+classification\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="FTModelCard_capabilities_ModelCapabilities_completion_chat"
   headingId="operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+ftmodelcard+capabilities+modelcapabilities+completion_chat"
   parentId="FTModelCard_capabilities_ModelCapabilities"
@@ -5205,6 +5667,74 @@ defaultValue: MyDefaultValue
 <ExpandablePropertyTitle slot="title">
 
 ##### deprecation \{#operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+ftmodelcard+deprecation\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="FTModelCard_deprecation_replacement_model"
+  headingId="operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+ftmodelcard+deprecation_replacement_model"
+  parentId="FTModelCard"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### deprecation_replacement_model \{#operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+ftmodelcard+deprecation_replacement_model\}
 
 </ExpandablePropertyTitle>
 
@@ -5892,7 +6422,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.delete({
+  const result = await mistral.models.deleteModelV1ModelsModelIdDelete({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
   });
 
@@ -5929,7 +6459,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.delete(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.delete_model_v1_models_model_id_delete(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
@@ -6279,7 +6809,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.update({
+  const result = await mistral.models.jobsApiRoutesFineTuningUpdateFineTunedModel({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
     updateFTModelIn: {},
   });
@@ -6317,7 +6847,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.update(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.jobs_api_routes_fine_tuning_update_fine_tuned_model(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
@@ -7916,6 +8446,142 @@ defaultValue: MyDefaultValue
 <ExpandablePropertyTitle slot="title">
 
 ##### root \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+completionftmodelout+root\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="CompletionFTModelOut_root_version"
+  headingId="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+completionftmodelout+root_version"
+  parentId="CompletionFTModelOut"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### root_version \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+completionftmodelout+root_version\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="CompletionFTModelOut_workspace_id"
+  headingId="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+completionftmodelout+workspace_id"
+  parentId="CompletionFTModelOut"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### workspace_id \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+completionftmodelout+workspace_id\}
 
 </ExpandablePropertyTitle>
 
@@ -9671,6 +10337,142 @@ defaultValue: MyDefaultValue
 
 </ExpandableProperty>
 
+<ExpandableProperty
+  slot="entry"
+  id="ClassifierFTModelOut_root_version"
+  headingId="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+classifierftmodelout+root_version"
+  parentId="ClassifierFTModelOut"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### root_version \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+classifierftmodelout+root_version\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="ClassifierFTModelOut_workspace_id"
+  headingId="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+classifierftmodelout+workspace_id"
+  parentId="ClassifierFTModelOut"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### workspace_id \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+classifierftmodelout+workspace_id\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
 </ExpandableBreakoutProperties>
 
 </ExpandableBreakout>
@@ -9732,7 +10534,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.archive({
+  const result = await mistral.models.jobsApiRoutesFineTuningArchiveFineTunedModel({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
   });
 
@@ -9769,7 +10571,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.archive(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.jobs_api_routes_fine_tuning_archive_fine_tuned_model(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
@@ -10163,7 +10965,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.unarchive({
+  const result = await mistral.models.jobsApiRoutesFineTuningUnarchiveFineTunedModel({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
   });
 
@@ -10200,7 +11002,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.unarchive(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.jobs_api_routes_fine_tuning_unarchive_fine_tuned_model(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
