--- a/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
@@ -96,7 +96,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.list({});
+  const result = await mistral.beta.agents.agentsApiV1AgentsList({});
 
   // Handle the result
   console.log(result);
@@ -126,7 +126,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.list()
+    res = mistral.beta.agents.agents_api_v1_agents_list()
 
     # Handle response
     print(res)
@@ -608,7 +608,7 @@ _Default Value:_ `"content"`
   parentId="Agent_completion_args_CompletionArgs_response_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -617,6 +617,12 @@ _Default Value:_ `"content"`
 ##### strict [#operation-agents_api_v1_agents_list_responses_200_application-json_agent_completion_args_completionargs_response_format_responseformat_json_schema_jsonschema_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -685,9 +691,9 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="Agent_completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_list_responses_200_application-json_agent_completion_args_completionargs_temperature"
   parentId="Agent_completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
-  hasExpandableContent={true}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -696,12 +702,6 @@ An object specifying the format that the model must output. Setting to `\{ "type
 ##### temperature [#operation-agents_api_v1_agents_list_responses_200_application-json_agent_completion_args_completionargs_temperature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDefaultValue slot="defaultValue">
-
-_Default Value:_ `0.3`
-
-</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1000,7 +1000,7 @@ List of tools which are available to the model during the conversation.
   parentId="Agent_tools_FunctionTool_function_Function"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1009,6 +1009,12 @@ List of tools which are available to the model during the conversation.
 ##### description [#operation-agents_api_v1_agents_list_responses_200_application-json_agent_tools_functiontool_function_function_description]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `""`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1057,7 +1063,7 @@ List of tools which are available to the model during the conversation.
   parentId="Agent_tools_FunctionTool_function_Function"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1066,6 +1072,12 @@ List of tools which are available to the model during the conversation.
 ##### strict [#operation-agents_api_v1_agents_list_responses_200_application-json_agent_tools_functiontool_function_function_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1461,7 +1473,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.create({
+  const result = await mistral.beta.agents.agentsApiV1AgentsCreate({
     model: "LeBaron",
     name: "<value>",
   });
@@ -1494,7 +1506,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.create(model="LeBaron", name="<value>")
+    res = mistral.beta.agents.agents_api_v1_agents_create(model="LeBaron", name="<value>")
 
     # Handle response
     print(res)
@@ -1875,7 +1887,7 @@ _Default Value:_ `"content"`
   parentId="completion_args_CompletionArgs_response_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -1884,6 +1896,12 @@ _Default Value:_ `"content"`
 ##### strict [#operation-agents_api_v1_agents_create_request_completion_args_completionargs_response_format_responseformat_json_schema_jsonschema_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -1952,9 +1970,9 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_create_request_completion_args_completionargs_temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
-  hasExpandableContent={true}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -1963,12 +1981,6 @@ An object specifying the format that the model must output. Setting to `\{ "type
 ##### temperature [#operation-agents_api_v1_agents_create_request_completion_args_completionargs_temperature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDefaultValue slot="defaultValue">
-
-_Default Value:_ `0.3`
-
-</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -2198,7 +2210,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2207,6 +2219,12 @@ List of tools which are available to the model during the conversation.
 ##### description [#operation-agents_api_v1_agents_create_request_tools_functiontool_function_function_description]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `""`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -2255,7 +2273,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2264,6 +2282,12 @@ List of tools which are available to the model during the conversation.
 ##### strict [#operation-agents_api_v1_agents_create_request_tools_functiontool_function_function_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -2956,7 +2980,7 @@ _Default Value:_ `"content"`
   parentId="completion_args_CompletionArgs_response_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -2965,6 +2989,12 @@ _Default Value:_ `"content"`
 ##### strict [#operation-agents_api_v1_agents_create_responses_200_application-json_completion_args_completionargs_response_format_responseformat_json_schema_jsonschema_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -3033,9 +3063,9 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_create_responses_200_application-json_completion_args_completionargs_temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
-  hasExpandableContent={true}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -3044,12 +3074,6 @@ An object specifying the format that the model must output. Setting to `\{ "type
 ##### temperature [#operation-agents_api_v1_agents_create_responses_200_application-json_completion_args_completionargs_temperature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDefaultValue slot="defaultValue">
-
-_Default Value:_ `0.3`
-
-</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -3339,7 +3363,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -3348,6 +3372,12 @@ List of tools which are available to the model during the conversation.
 ##### description [#operation-agents_api_v1_agents_create_responses_200_application-json_tools_functiontool_function_function_description]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `""`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -3396,7 +3426,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -3405,6 +3435,12 @@ List of tools which are available to the model during the conversation.
 ##### strict [#operation-agents_api_v1_agents_create_responses_200_application-json_tools_functiontool_function_function_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -3791,7 +3827,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.get({
+  const result = await mistral.beta.agents.agentsApiV1AgentsGet({
     agentId: "<id>",
   });
 
@@ -3823,7 +3859,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.get(agent_id="<id>")
+    res = mistral.beta.agents.agents_api_v1_agents_get(agent_id="<id>")
 
     # Handle response
     print(res)
@@ -4262,7 +4298,7 @@ _Default Value:_ `"content"`
   parentId="completion_args_CompletionArgs_response_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4271,6 +4307,12 @@ _Default Value:_ `"content"`
 ##### strict [#operation-agents_api_v1_agents_get_responses_200_application-json_completion_args_completionargs_response_format_responseformat_json_schema_jsonschema_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -4339,9 +4381,9 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_get_responses_200_application-json_completion_args_completionargs_temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
-  hasExpandableContent={true}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -4350,12 +4392,6 @@ An object specifying the format that the model must output. Setting to `\{ "type
 ##### temperature [#operation-agents_api_v1_agents_get_responses_200_application-json_completion_args_completionargs_temperature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDefaultValue slot="defaultValue">
-
-_Default Value:_ `0.3`
-
-</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -4645,7 +4681,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4654,6 +4690,12 @@ List of tools which are available to the model during the conversation.
 ##### description [#operation-agents_api_v1_agents_get_responses_200_application-json_tools_functiontool_function_function_description]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `""`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -4702,7 +4744,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -4711,6 +4753,12 @@ List of tools which are available to the model during the conversation.
 ##### strict [#operation-agents_api_v1_agents_get_responses_200_application-json_tools_functiontool_function_function_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -5100,7 +5148,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.update({
+  const result = await mistral.beta.agents.agentsApiV1AgentsUpdate({
     agentId: "<id>",
     agentUpdateRequest: {},
   });
@@ -5133,7 +5181,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.update(agent_id="<id>")
+    res = mistral.beta.agents.agents_api_v1_agents_update(agent_id="<id>")
 
     # Handle response
     print(res)
@@ -5554,7 +5602,7 @@ _Default Value:_ `"content"`
   parentId="completion_args_CompletionArgs_response_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -5563,6 +5611,12 @@ _Default Value:_ `"content"`
 ##### strict [#operation-agents_api_v1_agents_update_request_completion_args_completionargs_response_format_responseformat_json_schema_jsonschema_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -5631,9 +5685,9 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_update_request_completion_args_completionargs_temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
-  hasExpandableContent={true}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -5642,12 +5696,6 @@ An object specifying the format that the model must output. Setting to `\{ "type
 ##### temperature [#operation-agents_api_v1_agents_update_request_completion_args_completionargs_temperature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDefaultValue slot="defaultValue">
-
-_Default Value:_ `0.3`
-
-</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -5877,7 +5925,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -5886,6 +5934,12 @@ List of tools which are available to the model during the conversation.
 ##### description [#operation-agents_api_v1_agents_update_request_tools_functiontool_function_function_description]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `""`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -5934,7 +5988,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -5943,6 +5997,12 @@ List of tools which are available to the model during the conversation.
 ##### strict [#operation-agents_api_v1_agents_update_request_tools_functiontool_function_function_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -6635,7 +6695,7 @@ _Default Value:_ `"content"`
   parentId="completion_args_CompletionArgs_response_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -6644,6 +6704,12 @@ _Default Value:_ `"content"`
 ##### strict [#operation-agents_api_v1_agents_update_responses_200_application-json_completion_args_completionargs_response_format_responseformat_json_schema_jsonschema_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -6712,9 +6778,9 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_update_responses_200_application-json_completion_args_completionargs_temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
-  hasExpandableContent={true}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -6723,12 +6789,6 @@ An object specifying the format that the model must output. Setting to `\{ "type
 ##### temperature [#operation-agents_api_v1_agents_update_responses_200_application-json_completion_args_completionargs_temperature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDefaultValue slot="defaultValue">
-
-_Default Value:_ `0.3`
-
-</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -7018,7 +7078,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -7027,6 +7087,12 @@ List of tools which are available to the model during the conversation.
 ##### description [#operation-agents_api_v1_agents_update_responses_200_application-json_tools_functiontool_function_function_description]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `""`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -7075,7 +7141,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -7084,6 +7150,12 @@ List of tools which are available to the model during the conversation.
 ##### strict [#operation-agents_api_v1_agents_update_responses_200_application-json_tools_functiontool_function_function_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -7476,7 +7548,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.beta.agents.updateVersion({
+  const result = await mistral.beta.agents.agentsApiV1AgentsUpdateVersion({
     agentId: "<id>",
     version: 157995,
   });
@@ -7515,7 +7587,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.agents.update_version(agent_id="<id>", version=157995)
+    res = mistral.beta.agents.agents_api_v1_agents_update_version(agent_id="<id>", version=157995)
 
     # Handle response
     print(res)
@@ -7972,7 +8044,7 @@ _Default Value:_ `"content"`
   parentId="completion_args_CompletionArgs_response_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -7981,6 +8053,12 @@ _Default Value:_ `"content"`
 ##### strict [#operation-agents_api_v1_agents_update_version_responses_200_application-json_completion_args_completionargs_response_format_responseformat_json_schema_jsonschema_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -8049,9 +8127,9 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="completion_args_CompletionArgs_temperature"
   headingId="operation-agents_api_v1_agents_update_version_responses_200_application-json_completion_args_completionargs_temperature"
   parentId="completion_args_CompletionArgs"
-  typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
-  hasExpandableContent={true}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
@@ -8060,12 +8138,6 @@ An object specifying the format that the model must output. Setting to `\{ "type
 ##### temperature [#operation-agents_api_v1_agents_update_version_responses_200_application-json_completion_args_completionargs_temperature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDefaultValue slot="defaultValue">
-
-_Default Value:_ `0.3`
-
-</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -8355,7 +8427,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -8364,6 +8436,12 @@ List of tools which are available to the model during the conversation.
 ##### description [#operation-agents_api_v1_agents_update_version_responses_200_application-json_tools_functiontool_function_function_description]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `""`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -8412,7 +8490,7 @@ List of tools which are available to the model during the conversation.
   parentId="tools_FunctionTool_function_Function"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -8421,6 +8499,12 @@ List of tools which are available to the model during the conversation.
 ##### strict [#operation-agents_api_v1_agents_update_version_responses_200_application-json_tools_functiontool_function_function_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
