--- a/examples/nextra/mistral/src/app/api/endpoint/models/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/models/page.mdx
@@ -97,7 +97,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.list();
+  const result = await mistral.models.listModelsV1ModelsGet();
 
   // Handle the result
   console.log(result);
@@ -127,7 +127,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.list()
+    res = mistral.models.list_models_v1_models_get()
 
     # Handle response
     print(res)
@@ -262,6 +262,31 @@ Successful Response
 </ExpandableBreakoutTitle>
 
 <ExpandableBreakoutProperties slot="properties">
+
+<ExpandableProperty
+  slot="entry"
+  id="data_BaseModelCard_capabilities_ModelCapabilities_classification"
+  headingId="operation-list_models_v1_models_get_responses_200_application-json_data_basemodelcard_capabilities_modelcapabilities_classification"
+  parentId="data_BaseModelCard_capabilities_ModelCapabilities"
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### classification [#operation-list_models_v1_models_get_responses_200_application-json_data_basemodelcard_capabilities_modelcapabilities_classification]
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
@@ -448,6 +473,25 @@ _Default Value:_ `false`
 <ExpandablePropertyTitle slot="title">
 
 ##### deprecation [#operation-list_models_v1_models_get_responses_200_application-json_data_basemodelcard_deprecation]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="data_BaseModelCard_deprecation_replacement_model"
+  headingId="operation-list_models_v1_models_get_responses_200_application-json_data_basemodelcard_deprecation_replacement_model"
+  parentId="data_BaseModelCard"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### deprecation_replacement_model [#operation-list_models_v1_models_get_responses_200_application-json_data_basemodelcard_deprecation_replacement_model]
 
 </ExpandablePropertyTitle>
 
@@ -719,6 +763,31 @@ _Default Value:_ `false`
 
 <ExpandableProperty
   slot="entry"
+  id="data_FTModelCard_capabilities_ModelCapabilities_classification"
+  headingId="operation-list_models_v1_models_get_responses_200_application-json_data_ftmodelcard_capabilities_modelcapabilities_classification"
+  parentId="data_FTModelCard_capabilities_ModelCapabilities"
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### classification [#operation-list_models_v1_models_get_responses_200_application-json_data_ftmodelcard_capabilities_modelcapabilities_classification]
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="data_FTModelCard_capabilities_ModelCapabilities_completion_chat"
   headingId="operation-list_models_v1_models_get_responses_200_application-json_data_ftmodelcard_capabilities_modelcapabilities_completion_chat"
   parentId="data_FTModelCard_capabilities_ModelCapabilities"
@@ -902,6 +971,25 @@ _Default Value:_ `false`
 <ExpandablePropertyTitle slot="title">
 
 ##### deprecation [#operation-list_models_v1_models_get_responses_200_application-json_data_ftmodelcard_deprecation]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="data_FTModelCard_deprecation_replacement_model"
+  headingId="operation-list_models_v1_models_get_responses_200_application-json_data_ftmodelcard_deprecation_replacement_model"
+  parentId="data_FTModelCard"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### deprecation_replacement_model [#operation-list_models_v1_models_get_responses_200_application-json_data_ftmodelcard_deprecation_replacement_model]
 
 </ExpandablePropertyTitle>
 
@@ -1160,7 +1248,7 @@ _Retrieve Model_
 
 <OperationDescriptionSection slot="description">
 
-Retrieve a model information.
+Retrieve information about a model.
 
 </OperationDescriptionSection>
 
@@ -1191,7 +1279,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.retrieve({
+  const result = await mistral.models.retrieveModelV1ModelsModelIdGet({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
   });
 
@@ -1229,10 +1317,36 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.retrieve(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.retrieve_model_v1_models_model_id_get(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
+```
+
+</CodeSample>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-retrieve_model_v1_models_model_id_get_code-samples_curl"
+>
+
+cURL
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-retrieve_model_v1_models_model_id_get_code-samples_curl"
+>
+
+<CodeSample>
+
+```cURL
+curl --request GET \
+--url 'https://api.mistral.ai/v1/models/{model_id}' \
+
 ```
 
 </CodeSample>
@@ -1399,6 +1513,31 @@ Successful Response
 </ExpandableBreakoutTitle>
 
 <ExpandableBreakoutProperties slot="properties">
+
+<ExpandableProperty
+  slot="entry"
+  id="BaseModelCard_capabilities_ModelCapabilities_classification"
+  headingId="operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_basemodelcard_capabilities_modelcapabilities_classification"
+  parentId="BaseModelCard_capabilities_ModelCapabilities"
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### classification [#operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_basemodelcard_capabilities_modelcapabilities_classification]
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
@@ -1585,6 +1724,25 @@ _Default Value:_ `false`
 <ExpandablePropertyTitle slot="title">
 
 ##### deprecation [#operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_basemodelcard_deprecation]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="BaseModelCard_deprecation_replacement_model"
+  headingId="operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_basemodelcard_deprecation_replacement_model"
+  parentId="BaseModelCard"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### deprecation_replacement_model [#operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_basemodelcard_deprecation_replacement_model]
 
 </ExpandablePropertyTitle>
 
@@ -1855,6 +2013,31 @@ _Default Value:_ `false`
 
 <ExpandableProperty
   slot="entry"
+  id="FTModelCard_capabilities_ModelCapabilities_classification"
+  headingId="operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_ftmodelcard_capabilities_modelcapabilities_classification"
+  parentId="FTModelCard_capabilities_ModelCapabilities"
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### classification [#operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_ftmodelcard_capabilities_modelcapabilities_classification]
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="FTModelCard_capabilities_ModelCapabilities_completion_chat"
   headingId="operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_ftmodelcard_capabilities_modelcapabilities_completion_chat"
   parentId="FTModelCard_capabilities_ModelCapabilities"
@@ -2038,6 +2221,25 @@ _Default Value:_ `false`
 <ExpandablePropertyTitle slot="title">
 
 ##### deprecation [#operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_ftmodelcard_deprecation]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="FTModelCard_deprecation_replacement_model"
+  headingId="operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_ftmodelcard_deprecation_replacement_model"
+  parentId="FTModelCard"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### deprecation_replacement_model [#operation-retrieve_model_v1_models_model_id_get_responses_200_application-json_ftmodelcard_deprecation_replacement_model]
 
 </ExpandablePropertyTitle>
 
@@ -2299,7 +2501,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.delete({
+  const result = await mistral.models.deleteModelV1ModelsModelIdDelete({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
   });
 
@@ -2337,7 +2539,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.delete(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.delete_model_v1_models_model_id_delete(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
@@ -2590,7 +2792,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.update({
+  const result = await mistral.models.jobsApiRoutesFineTuningUpdateFineTunedModel({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
     updateFTModelIn: {},
   });
@@ -2629,7 +2831,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.update(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.jobs_api_routes_fine_tuning_update_fine_tuned_model(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
@@ -3218,6 +3420,44 @@ _Default Value:_ `"model"`
 
 </ExpandableProperty>
 
+<ExpandableProperty
+  slot="entry"
+  id="CompletionFTModelOut_root_version"
+  headingId="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_responses_200_application-json_completionftmodelout_root_version"
+  parentId="CompletionFTModelOut"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### root_version [#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_responses_200_application-json_completionftmodelout_root_version]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="CompletionFTModelOut_workspace_id"
+  headingId="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_responses_200_application-json_completionftmodelout_workspace_id"
+  parentId="CompletionFTModelOut"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### workspace_id [#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_responses_200_application-json_completionftmodelout_workspace_id]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
 </ExpandableBreakoutProperties>
 
 </ExpandableBreakout>
@@ -3773,6 +4013,44 @@ _Default Value:_ `"model"`
 
 </ExpandableProperty>
 
+<ExpandableProperty
+  slot="entry"
+  id="ClassifierFTModelOut_root_version"
+  headingId="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_responses_200_application-json_classifierftmodelout_root_version"
+  parentId="ClassifierFTModelOut"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### root_version [#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_responses_200_application-json_classifierftmodelout_root_version]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="ClassifierFTModelOut_workspace_id"
+  headingId="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_responses_200_application-json_classifierftmodelout_workspace_id"
+  parentId="ClassifierFTModelOut"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### workspace_id [#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_responses_200_application-json_classifierftmodelout_workspace_id]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
 </ExpandableBreakoutProperties>
 
 </ExpandableBreakout>
@@ -3834,7 +4112,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.archive({
+  const result = await mistral.models.jobsApiRoutesFineTuningArchiveFineTunedModel({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
   });
 
@@ -3872,7 +4150,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.archive(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.jobs_api_routes_fine_tuning_archive_fine_tuned_model(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
@@ -4087,7 +4365,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.models.unarchive({
+  const result = await mistral.models.jobsApiRoutesFineTuningUnarchiveFineTunedModel({
     modelId: "ft:open-mistral-7b:587a6b29:20240514:7e773925",
   });
 
@@ -4125,7 +4403,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.models.unarchive(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
+    res = mistral.models.jobs_api_routes_fine_tuning_unarchive_fine_tuned_model(model_id="ft:open-mistral-7b:587a6b29:20240514:7e773925")
 
     # Handle response
     print(res)
