--- a/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
@@ -86,13 +86,11 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.ocr.process({
+  const result = await mistral.ocr.ocrV1OcrPost({
     model: "CX-9",
     document: {
-      imageUrl: {
-        url: "https://measly-scrap.com",
-      },
-      type: "image_url",
+      documentUrl: "https://upset-labourer.net/",
+      type: "document_url",
     },
   });
 
@@ -124,11 +122,9 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.ocr.process(model="CX-9", document={
-        "image_url": {
-            "url": "https://measly-scrap.com",
-        },
-        "type": models.ImageURLChunkType.IMAGE_URL,
+    res = mistral.ocr.ocr_v1_ocr_post(model="CX-9", document={
+        "document_url": "https://upset-labourer.net/",
+        "type": models.DocumentURLChunkType.DOCUMENT_URL,
     })
 
     # Handle response
@@ -292,7 +288,7 @@ with Mistral(
   parentId="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -301,6 +297,12 @@ with Mistral(
 ##### strict [#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
@@ -349,7 +351,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   slot="entry"
   id="document"
   headingId="operation-ocr_v1_ocr_post_request_document"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_document_documenturlchunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_document_imageurlchunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"FileChunk","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_document_filechunk\">FileChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_document_documenturlchunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_document_imageurlchunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasExpandableContent={true}
   expandByDefault={true}
@@ -368,6 +370,71 @@ Document to run OCR on
 </ExpandablePropertyDescription>
 
 <ExpandablePropertyBreakouts slot="breakouts">
+
+<ExpandableBreakout
+  slot="entry"
+  id="document_FileChunk"
+  headingId="operation-ocr_v1_ocr_post_request_document_filechunk"
+  parentId="document"
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandableBreakoutTitle slot="title">
+
+#### FileChunk [#operation-ocr_v1_ocr_post_request_document_filechunk]
+
+</ExpandableBreakoutTitle>
+
+<ExpandableBreakoutProperties slot="properties">
+
+<ExpandableProperty
+  slot="entry"
+  id="document_FileChunk_file_id"
+  headingId="operation-ocr_v1_ocr_post_request_document_filechunk_file_id"
+  parentId="document_FileChunk"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### file_id [#operation-ocr_v1_ocr_post_request_document_filechunk_file_id]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="document_FileChunk_type"
+  headingId="operation-ocr_v1_ocr_post_request_document_filechunk_type"
+  parentId="document_FileChunk"
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### type [#operation-ocr_v1_ocr_post_request_document_filechunk_type]
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `"file"`
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+</ExpandableBreakoutProperties>
+
+</ExpandableBreakout>
 
 <ExpandableBreakout
   slot="entry"
@@ -476,7 +543,7 @@ _Default Value:_ `"document_url"`
 
 <ExpandableBreakoutDescription slot="description">
 
-An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
+\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0
 
 </ExpandableBreakoutDescription>
 
@@ -732,7 +799,7 @@ _Default Value:_ `"image_url"`
   parentId="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
-  hasExpandableContent={false}
+  hasExpandableContent={true}
   expandByDefault={false}
 >
 
@@ -741,6 +808,12 @@ _Default Value:_ `"image_url"`
 ##### strict [#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema_strict]
 
 </ExpandablePropertyTitle>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+_Default Value:_ `false`
+
+</ExpandablePropertyDefaultValue>
 
 </ExpandableProperty>
 
