--- a/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 3.7
+sidebar_position: 3.11
 sidebar_label: Files
 ---
 
@@ -107,7 +107,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.list({});
+  const result = await mistral.files.filesApiRoutesListFiles({});
 
   // Handle the result
   console.log(result);
@@ -136,7 +136,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.list()
+    res = mistral.files.files_api_routes_list_files()
 
     # Handle response
     print(res)
@@ -381,6 +381,57 @@ defaultValue: MyDefaultValue
 
 <ExpandableProperty
   slot="entry"
+  id="data_FileSchema_bytes"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+bytes"
+  parentId="data_FileSchema"
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### bytes \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+bytes\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+13000
+```
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="data_FileSchema_created_at"
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+created_at"
   parentId="data_FileSchema"
@@ -511,6 +562,74 @@ _Example:_
 ```
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="data_FileSchema_mimetype"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+mimetype"
+  parentId="data_FileSchema"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### mimetype \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+mimetype\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyExamples>
 
@@ -789,34 +908,51 @@ defaultValue: MyDefaultValue
 
 <ExpandableProperty
   slot="entry"
-  id="data_FileSchema_size_bytes"
-  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+size_bytes"
+  id="data_FileSchema_signature"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+signature"
   parentId="data_FileSchema"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={false}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### size_bytes \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+size_bytes\}
+##### signature \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+signature\}
 
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyDescription slot="description">
 
-The size of the file, in bytes.
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDescription>
 
 <ExpandablePropertyExamples slot="examples">
 
-_Example:_
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
 
 ```
-13000
+examples:
+  - MyExampleValue
 ```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyExamples>
 
@@ -1107,7 +1243,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.upload({
+  const result = await mistral.files.filesApiRoutesUploadFile({
     file: await openAsBlob("example.file"),
   });
 
@@ -1138,7 +1274,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.upload(file={
+    res = mistral.files.files_api_routes_upload_file(file={
         "file_name": "example.file",
         "content": open("example.file", "rb"),
     })
@@ -1665,6 +1801,56 @@ OK
 
 <ExpandableProperty
   slot="entry"
+  id="bytes"
+  headingId="operation-files_api_routes_upload_file+responses+200+application-json+bytes"
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={true}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### bytes \{#operation-files_api_routes_upload_file+responses+200+application-json+bytes\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+13000
+```
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="created_at"
   headingId="operation-files_api_routes_upload_file+responses+200+application-json+created_at"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
@@ -1792,6 +1978,73 @@ _Example:_
 ```
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="mimetype"
+  headingId="operation-files_api_routes_upload_file+responses+200+application-json+mimetype"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={true}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### mimetype \{#operation-files_api_routes_upload_file+responses+200+application-json+mimetype\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyExamples>
 
@@ -2066,33 +2319,50 @@ defaultValue: MyDefaultValue
 
 <ExpandableProperty
   slot="entry"
-  id="size_bytes"
-  headingId="operation-files_api_routes_upload_file+responses+200+application-json+size_bytes"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  id="signature"
+  headingId="operation-files_api_routes_upload_file+responses+200+application-json+signature"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### size_bytes \{#operation-files_api_routes_upload_file+responses+200+application-json+size_bytes\}
+##### signature \{#operation-files_api_routes_upload_file+responses+200+application-json+signature\}
 
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyDescription slot="description">
 
-The size of the file, in bytes.
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDescription>
 
 <ExpandablePropertyExamples slot="examples">
 
-_Example:_
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
 
 ```
-13000
+examples:
+  - MyExampleValue
 ```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyExamples>
 
@@ -2238,7 +2508,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.retrieve({
+  const result = await mistral.files.filesApiRoutesRetrieveFile({
     fileId: "f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6",
   });
 
@@ -2272,7 +2542,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.retrieve(file_id="f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6")
+    res = mistral.files.files_api_routes_retrieve_file(file_id="f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6")
 
     # Handle response
     print(res)
@@ -2437,6 +2707,56 @@ OK
 </OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
+
+<ExpandableProperty
+  slot="entry"
+  id="bytes"
+  headingId="operation-files_api_routes_retrieve_file+responses+200+application-json+bytes"
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={true}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### bytes \{#operation-files_api_routes_retrieve_file+responses+200+application-json+bytes\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+13000
+```
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
@@ -2634,6 +2954,73 @@ _Example:_
 ```
 497f6eca-6276-4993-bfeb-53cbbbba6f09
 ```
+
+</ExpandablePropertyExamples>
+
+<ExpandablePropertyDefaultValue slot="defaultValue">
+
+<DebugPlaceholder>
+
+No default value provided
+
+_OpenAPI example:_
+
+```
+defaultValue: MyDefaultValue
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDefaultValue>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
+  id="mimetype"
+  headingId="operation-files_api_routes_retrieve_file+responses+200+application-json+mimetype"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={true}
+  expandByDefault={true}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### mimetype \{#operation-files_api_routes_retrieve_file+responses+200+application-json+mimetype\}
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+examples:
+  - MyExampleValue
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyExamples>
 
@@ -2908,33 +3295,50 @@ defaultValue: MyDefaultValue
 
 <ExpandableProperty
   slot="entry"
-  id="size_bytes"
-  headingId="operation-files_api_routes_retrieve_file+responses+200+application-json+size_bytes"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  id="signature"
+  headingId="operation-files_api_routes_retrieve_file+responses+200+application-json+signature"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasExpandableContent={true}
   expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### size_bytes \{#operation-files_api_routes_retrieve_file+responses+200+application-json+size_bytes\}
+##### signature \{#operation-files_api_routes_retrieve_file+responses+200+application-json+signature\}
 
 </ExpandablePropertyTitle>
 
 <ExpandablePropertyDescription slot="description">
 
-The size of the file, in bytes.
+<DebugPlaceholder>
+
+No description provided
+
+_OpenAPI example:_
+
+```
+description: My awesome description
+```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyDescription>
 
 <ExpandablePropertyExamples slot="examples">
 
-_Example:_
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
 
 ```
-13000
+examples:
+  - MyExampleValue
 ```
+
+</DebugPlaceholder>
 
 </ExpandablePropertyExamples>
 
@@ -3077,7 +3481,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.delete({
+  const result = await mistral.files.filesApiRoutesDeleteFile({
     fileId: "3b6d45eb-e30b-416f-8019-f47e2e93d930",
   });
 
@@ -3108,7 +3512,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.delete(file_id="3b6d45eb-e30b-416f-8019-f47e2e93d930")
+    res = mistral.files.files_api_routes_delete_file(file_id="3b6d45eb-e30b-416f-8019-f47e2e93d930")
 
     # Handle response
     print(res)
@@ -3481,7 +3885,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.download({
+  const result = await mistral.files.filesApiRoutesDownloadFile({
     fileId: "f8919994-a4a1-46b2-8b5b-06335a4300ce",
   });
 
@@ -3515,7 +3919,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.download(file_id="f8919994-a4a1-46b2-8b5b-06335a4300ce")
+    res = mistral.files.files_api_routes_download_file(file_id="f8919994-a4a1-46b2-8b5b-06335a4300ce")
 
     # Handle response
     print(res)
@@ -3752,7 +4156,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.getSignedUrl({
+  const result = await mistral.files.filesApiRoutesGetSignedUrl({
     fileId: "06a020ab-355c-49a6-b19d-304b7c01699f",
   });
 
@@ -3786,7 +4190,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.get_signed_url(file_id="06a020ab-355c-49a6-b19d-304b7c01699f")
+    res = mistral.files.files_api_routes_get_signed_url(file_id="06a020ab-355c-49a6-b19d-304b7c01699f")
 
     # Handle response
     print(res)
