--- a/examples/nextra/mistral/src/app/api/endpoint/files/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/files/page.mdx
@@ -99,7 +99,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.list({});
+  const result = await mistral.files.filesApiRoutesListFiles({});
 
   // Handle the result
   console.log(result);
@@ -129,7 +129,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.list()
+    res = mistral.files.files_api_routes_list_files()
 
     # Handle response
     print(res)
@@ -209,6 +209,41 @@ OK
 </ExpandableBreakoutTitle>
 
 <ExpandableBreakoutProperties slot="properties">
+
+<ExpandableProperty
+  slot="entry"
+  id="data_FileSchema_bytes"
+  headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_bytes"
+  parentId="data_FileSchema"
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### bytes [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_bytes]
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+13000
+```
+
+</ExpandablePropertyExamples>
+
+</ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
@@ -317,6 +352,25 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
+  id="data_FileSchema_mimetype"
+  headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_mimetype"
+  parentId="data_FileSchema"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
+  expandByDefault={false}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### mimetype [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_mimetype]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="data_FileSchema_num_lines"
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_num_lines"
   parentId="data_FileSchema"
@@ -409,36 +463,20 @@ file
 
 <ExpandableProperty
   slot="entry"
-  id="data_FileSchema_size_bytes"
-  headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_size_bytes"
+  id="data_FileSchema_signature"
+  headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_signature"
   parentId="data_FileSchema"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={false}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### size_bytes [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_size_bytes]
+##### signature [#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_signature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The size of the file, in bytes.
-
-</ExpandablePropertyDescription>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-13000
-```
-
-</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -564,7 +602,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.upload({
+  const result = await mistral.files.filesApiRoutesUploadFile({
     file: await openAsBlob("example.file"),
   });
 
@@ -596,7 +634,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.upload(file={
+    res = mistral.files.files_api_routes_upload_file(file={
         "file_name": "example.file",
         "content": open("example.file", "rb"),
     })
@@ -796,6 +834,40 @@ OK
 
 <ExpandableProperty
   slot="entry"
+  id="bytes"
+  headingId="operation-files_api_routes_upload_file_responses_200_application-json_bytes"
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={true}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### bytes [#operation-files_api_routes_upload_file_responses_200_application-json_bytes]
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+13000
+```
+
+</ExpandablePropertyExamples>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="created_at"
   headingId="operation-files_api_routes_upload_file_responses_200_application-json_created_at"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
@@ -898,6 +970,24 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
+  id="mimetype"
+  headingId="operation-files_api_routes_upload_file_responses_200_application-json_mimetype"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
+  expandByDefault={true}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### mimetype [#operation-files_api_routes_upload_file_responses_200_application-json_mimetype]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="num_lines"
   headingId="operation-files_api_routes_upload_file_responses_200_application-json_num_lines"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
@@ -986,35 +1076,19 @@ file
 
 <ExpandableProperty
   slot="entry"
-  id="size_bytes"
-  headingId="operation-files_api_routes_upload_file_responses_200_application-json_size_bytes"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
+  id="signature"
+  headingId="operation-files_api_routes_upload_file_responses_200_application-json_signature"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### size_bytes [#operation-files_api_routes_upload_file_responses_200_application-json_size_bytes]
+##### signature [#operation-files_api_routes_upload_file_responses_200_application-json_signature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The size of the file, in bytes.
-
-</ExpandablePropertyDescription>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-13000
-```
-
-</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1093,7 +1167,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.retrieve({
+  const result = await mistral.files.filesApiRoutesRetrieveFile({
     fileId: "f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6",
   });
 
@@ -1128,7 +1202,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.retrieve(file_id="f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6")
+    res = mistral.files.files_api_routes_retrieve_file(file_id="f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6")
 
     # Handle response
     print(res)
@@ -1213,6 +1287,40 @@ OK
 </OperationResponseBodyDescriptionSection>
 
 <ExpandableSection>
+
+<ExpandableProperty
+  slot="entry"
+  id="bytes"
+  headingId="operation-files_api_routes_retrieve_file_responses_200_application-json_bytes"
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasExpandableContent={true}
+  expandByDefault={true}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### bytes [#operation-files_api_routes_retrieve_file_responses_200_application-json_bytes]
+
+</ExpandablePropertyTitle>
+
+<ExpandablePropertyDescription slot="description">
+
+The size of the file, in bytes.
+
+</ExpandablePropertyDescription>
+
+<ExpandablePropertyExamples slot="examples">
+
+_Example:_
+
+```
+13000
+```
+
+</ExpandablePropertyExamples>
+
+</ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
@@ -1336,6 +1444,24 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
+  id="mimetype"
+  headingId="operation-files_api_routes_retrieve_file_responses_200_application-json_mimetype"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
+  expandByDefault={true}
+>
+
+<ExpandablePropertyTitle slot="title">
+
+##### mimetype [#operation-files_api_routes_retrieve_file_responses_200_application-json_mimetype]
+
+</ExpandablePropertyTitle>
+
+</ExpandableProperty>
+
+<ExpandableProperty
+  slot="entry"
   id="num_lines"
   headingId="operation-files_api_routes_retrieve_file_responses_200_application-json_num_lines"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
@@ -1424,35 +1550,19 @@ file
 
 <ExpandableProperty
   slot="entry"
-  id="size_bytes"
-  headingId="operation-files_api_routes_retrieve_file_responses_200_application-json_size_bytes"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
-  hasExpandableContent={true}
+  id="signature"
+  headingId="operation-files_api_routes_retrieve_file_responses_200_application-json_signature"
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
+  hasExpandableContent={false}
   expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
 
-##### size_bytes [#operation-files_api_routes_retrieve_file_responses_200_application-json_size_bytes]
+##### signature [#operation-files_api_routes_retrieve_file_responses_200_application-json_signature]
 
 </ExpandablePropertyTitle>
-
-<ExpandablePropertyDescription slot="description">
-
-The size of the file, in bytes.
-
-</ExpandablePropertyDescription>
-
-<ExpandablePropertyExamples slot="examples">
-
-_Example:_
-
-```
-13000
-```
-
-</ExpandablePropertyExamples>
 
 </ExpandableProperty>
 
@@ -1528,7 +1638,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.delete({
+  const result = await mistral.files.filesApiRoutesDeleteFile({
     fileId: "3b6d45eb-e30b-416f-8019-f47e2e93d930",
   });
 
@@ -1560,7 +1670,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.delete(file_id="3b6d45eb-e30b-416f-8019-f47e2e93d930")
+    res = mistral.files.files_api_routes_delete_file(file_id="3b6d45eb-e30b-416f-8019-f47e2e93d930")
 
     # Handle response
     print(res)
@@ -1805,7 +1915,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.download({
+  const result = await mistral.files.filesApiRoutesDownloadFile({
     fileId: "f8919994-a4a1-46b2-8b5b-06335a4300ce",
   });
 
@@ -1840,7 +1950,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.download(file_id="f8919994-a4a1-46b2-8b5b-06335a4300ce")
+    res = mistral.files.files_api_routes_download_file(file_id="f8919994-a4a1-46b2-8b5b-06335a4300ce")
 
     # Handle response
     print(res)
@@ -1981,7 +2091,7 @@ const mistral = new Mistral({
 });
 
 async function run() {
-  const result = await mistral.files.getSignedUrl({
+  const result = await mistral.files.filesApiRoutesGetSignedUrl({
     fileId: "06a020ab-355c-49a6-b19d-304b7c01699f",
   });
 
@@ -2016,7 +2126,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.files.get_signed_url(file_id="06a020ab-355c-49a6-b19d-304b7c01699f")
+    res = mistral.files.files_api_routes_get_signed_url(file_id="06a020ab-355c-49a6-b19d-304b7c01699f")
 
     # Handle response
     print(res)
